# nullg

./: .gitignore  COPYRIGHT  ChangeLog  Makefile  Makefile.in  Makefile.no  Makefile.ns  Makefile.vc  README  README.md  Rules.mak  Rules.mak.in  confdefs.h  config.status  configure  configure.ac  configure.in  dedos  fromdos  groupware.dsw  groupware.sln  lxmake  make.bat  nsd.sln  nullg.sln  www.peterverity.com
Documentation/: COPYRIGHT  ChangeLog  CodingStyle  README  help
Rules/: FreeBSD  Linux  Linux2.0  LinuxVG  Unknown
config/: config.c  config.dsp  config.mak  config.rc  resource.h
contrib/: make_sqlite
dbutil/: Makefile  config.c  dbio.c  dbutil.dsp  dbutil.mak  dbutil.rc  main.c  main.h  md5.c  md5.h  mdb.c  sql-data.h  sql-mdac.h  sql-mysql.h  sql-odbc.h  sql-pgsql.h  sql-sqlite.h  sql.c  sql.h
debian/: README.Debian  changelog  conffiles.ex  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  nullgroupware-default  nullgroupware.doc-base.EX  nullgroupware.init  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
distrib/: COPYRIGHT  COPYRIGHT.txt  README.txt
distrib/etc/: groupware.cfg-  groupware.conf-sample  motd.txt  sentinel.cfg.sample  ssl-cert.pem-sample  ssl-priv.pem-sample
distrib/files/: files.html
doc/: COPYRIGHT  ChangeLog  README  help
etc/: modules-sample.conf  nullg-sample.conf  nullg-win32sample.conf  nullgs.conf-sample  nullgs.conf-win32  nullsd-sample.conf  nullsd-win32sample.conf  nullsd.conf-sample  nullsd.conf-win32  ssl-cert.pem-sample  ssl-priv.pem-sample
groupware/: Makefile  Makefile.bc  Makefile.gcc  groupware.dsp  groupware.mak  version.h
groupware/base/: auth.c  cgi.c  config.c  connio.c  dbio.c  fileio.c  format.c  html.c  http.c  logging.c  main.c  md5.c  sanity.c  server.c  sql.c  time.c  win32.c
groupware/include/: defines.h  functions.h  language-en.h  main.h  md5.h  resource.h  sqlite.h  typedefs.h
groupware/mods/: admin.c  bookmarks.c  calendar.c  calls.c  contacts.c  files.c  forums.c  messages.c  notes.c  orders.c  products.c  profile.c  searches.c  tasks.c  wmcodec.c  wmmain.c  wmserver.c  xml-rpc.c
groupware/winres/: groupware.rc
httpd/: Makefile  auth.c  config.c  format.c  html.c  http.c  httpd.dsp  httpd.mak  httpd.rc  io.c  log.c  main.c  md5.c  modctl.c  resource.h  sanity.c  server.c  sql.c  win32.c
include/: config-nt.h  config-nt.h.in  config.h.in  defines.h  functions.h  http_errno.h  http_functions.h  http_main.h  http_mod.h  http_records.h  http_typedefs.h  language-en.h  main.h  mod_stub.h  mod_substub.h  mod_typedefs.h  mysql-3_23.h  mysql.h  ngs.h  nsd.h  pop3_functions.h  pop3_main.h  pop3_typedefs.h  resource.h  smtp_functions.h  smtp_main.h  smtp_typedefs.h  srv_mod.h  ssl.h  typedefs.h  version.h
include/common/: defines.h  ssl.h  typedefs.h
include/core/: mod.h
include/ghttpd/: lang.h  mod.h  records.h  typedefs.h
include/httpd/: errno.h  lang.h  mod.h  records.h
include/i18n/: _language.h  httpd.h  mod_accounting.h  mod_admin.h  mod_bookmarks.h  mod_calendar.h  mod_calls.h  mod_files.h  mod_forums.h  mod_html.h  mod_mail.h  mod_messages.h  mod_notes.h  mod_orders.h  mod_profile.h  mod_projects.h  mod_searches.h  mod_tasks.h  mod_xmlrpc.h  pop3d.h  smtpd.h  srv_httpd.h  srv_pop3d.h  srv_smtpd.h
include/nesla/: libnesla.h  nesla.h
include/nsp/: nsp.h  nsplib.h
include/nullg/: config-broken.h  config-nt.h  config-nt.h.in  config.h.in  core_mod.h  defines.h  httpd_errno.h  httpd_mod.h  httpd_typedefs.h  nullg.h  ssl.h  typedefs.h
include/nullgs/: config-nt.h  config-nt.h.in  config.h.in  core_mod.h  defines.h  httpd_errno.h  httpd_mod.h  httpd_typedefs.h  ssl.h  typedefs.h
include/nullgw/: config-nt.h  config-nt.h.in
include/nullsd/: config-nt.h  config-nt.h.in  core_mod.h  defines.h  httpd_errno.h  httpd_mod.h  httpd_typedefs.h  nsd.h  ssl.h  typedefs.h
include/schema/: data.h  mysql.h  odbc.h  pgsql.h  sqlite.h
include/sql/: mysql-4_0.h  mysql-4_1.h  mysql.h  pgsql.h  sqlite3.h
lib/htdocs/: auth.nsp  index.nsp
lib/scripts/: class.datetime.ns  class.html_form.ns  class.html_table.ns  class.html_tabset.ns  class.pop3_sync.ns  class.sqlcommand.ns  common.html.ns  common.ns  db.ns  db.schema.ns  db.util.ns  encoding.ns  error.html.ns  timezones.ns  tzones.ns
linux/: setup
modules/: Makefile  Rules.mak  make.bat
modules/core_modules/: Makefile  make.bat
modules/ghttpd_modules/: Makefile  make.bat
modules/httpd_modules/: Makefile  make.bat
modules/include/: mod_stub.h  mod_substub.h  mod_typedefs.h
modules/mod_admin/: Makefile  mod_admin.def  mod_admin.dsp  mod_admin.h  mod_admin.mak  mod_admin_config.c  mod_admin_db.c  mod_admin_domains.c  mod_admin_groups.c  mod_admin_logs.c  mod_admin_main.c  mod_admin_syscheck.c  mod_admin_users.c  mod_admin_zones.c
other/: build.bat  configure  cron.daily  dist.bat  dist.iss  fromdos  groupware.dsw  lxtool  make_sqlite  nullgroupware.spec  rc.groupware  scan_file.sh  setup
pop3d/: Makefile  auth.c  config.c  format.c  io.c  log.c  main.c  md5.c  pop3.c  pop3d.dsp  pop3d.mak  sanity.c  server.c  sql.c  win32.c
scripts/: build.bat  configure  cron.daily  cron.daily.cmd  dist.bat  dist.iss  libsqlite3.dsp  libsqlite_make  lxtool  make_sqlite  nullgroupware.spec  nullgw-config  nullgw-config.pl  nullgw-init  nullgw-scanfile.sh  nullgw-scansmtp.sh  pack  rc.groupware  scan_smtp.sh  setup
server/: Makefile  auth.c  cgi.c  config.c  db.c  dns.c  domains.c  format.c  functions.h  html.c  http.c  io.c  language.c  log.c  logging.c  main.c  main.h  md5.c  modctl.c  sanity.c  server.c  server.dsp  server.mak  server.rc  sql.c  sql.h  ssl.c  sys.c  tcp.c  win32.c  xmlrpc.c
server_modules/: Makefile  make.bat
smtpd/: Makefile  auth.c  config.c  format.c  io.c  log.c  main.c  md5.c  sanity.c  server.c  smtp.c  smtpclient.c  smtpd.dsp  smtpd.mak  sql.c  win32.c
source/: Makefile  sentinel.dsw
sqlite/: make_sqlite
src/: Rules.mak.in  Rules.mak.vc  build.cmd
tools/: sapi-nullgw.diff
(+2270 files in other folders)
