# Process this file with autoconf to produce a configure script.
AC_INIT(nullgroupware, 1.3.17, nulllogic@users.sourceforge.net)
AC_CONFIG_HEADER([include/config.h])
AC_CANONICAL_HOST

AC_PROG_CC

# Checks for libraries.
AC_CHECK_LIB([dl], [dlopen])
UTIL_LIBS=$LIBS
AC_SUBST(UTIL_LIBS)

case "$host" in
	*-*-freebsd*)
		LIBS="$LIBS -pthread"
		check_pthread=no
	;;
esac
if test "$check_pthread" != no; then
	AC_CHECK_LIB([pthread], [pthread_create])
fi

AC_CHECK_LIB([resolv], [dn_expand])
#AC_CHECK_LIB([crypto], [main])
#AC_CHECK_LIB([ssl], [main])
AC_CHECK_FUNC(gethostent, , AC_CHECK_LIB(nsl, gethostent))
AC_CHECK_FUNC(setsockopt, , AC_CHECK_LIB(socket, setsockopt))

# Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([		\
	arpa/inet.h		\
	arpa/nameser_compat.h	\
	fcntl.h			\
	netdb.h			\
	netinet/in.h		\
	paths.h			\
	stdlib.h		\
	string.h		\
	sys/file.h		\
	sys/socket.h		\
	sys/time.h		\
	sys/timeb.h		\
	unistd.h		\
	mysql/mysql.h		\
	postgresql/libpq-fe.h	\
	openssl/ssl.h		\
])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_SETVBUF_REVERSED
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_FUNC_STRFTIME
AC_CHECK_FUNCS([			\
	dup2				\
	endpwent			\
	ftime				\
	getcwd				\
	gethostbyname			\
	gettimeofday			\
	inet_ntoa			\
	memmove				\
	memset				\
	mkdir				\
	rmdir				\
	socket				\
	strcasecmp			\
	strchr				\
	strncasecmp			\
	strrchr				\
	strstr				\
	strcasestr			\
	pthread_attr_setstacksize	\
])

AC_CONFIG_FILES([Rules.mak Makefile include/config-nt.h])
AC_OUTPUT

echo
echo "Configuring SQLite"
echo
cd sqlite;./make_sqlite configure;cd ..

echo
echo "Configuration completed."
echo
echo "Now run 'make'."
echo
